--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.1",
     "faker": "^5.5.3",
+    "method-override": "^3.0.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
