--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.1",
     "faker": "^5.5.3",
     "method-override": "^3.0.0",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.0",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
   }
