add getPayment route

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 USER_MAIL = skip
 USER_PASSWORD = skip
+MerchantID = MS320239107
+HashKey = WYS1lMxZZvoLIifGPyCya7k7KC1VA6Lz
+HashIV = CAe2WhQfqzYMHkoP
