modify getProducts route for paginator feature

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-USER_MAIL = skip
-USER_PASSWORD = skip
-MerchantID = MS320239107
-HashKey = WYS1lMxZZvoLIifGPyCya7k7KC1VA6Lz
-HashIV = CAe2WhQfqzYMHkoP
+PORT = 3000
+USER_MAIL = super000999888@gmail.com
+USER_PASSWORD = 
+MERCHANT_ID = MS320239107
+URL = http://5398463a6a33.ngrok.io
+HASH_KEY = WYS1lMxZZvoLIifGPyCya7k7KC1VA6Lz
+HASH_IV = CAe2WhQfqzYMHkoP
