--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ URL = http://5398463a6a33.ngrok.io
 HASH_KEY = WYS1lMxZZvoLIifGPyCya7k7KC1VA6Lz
 HASH_IV = CAe2WhQfqzYMHkoP
 IMGUR_CLIENT_ID = f942201de16afbf
+JWT_SECRET = jwtsecret
