--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
     "dotenv": "^9.0.2",
