--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT = 3000
 USER_MAIL = super000999888@gmail.com
-USER_PASSWORD = 
+USER_PASSWORD = fuckoff777
 MERCHANT_ID = MS320239107
-URL = http://5398463a6a33.ngrok.io
+URL = https://9ccfe2d4ec97.ngrok.io
 HASH_KEY = WYS1lMxZZvoLIifGPyCya7k7KC1VA6Lz
 HASH_IV = CAe2WhQfqzYMHkoP
 IMGUR_CLIENT_ID = f942201de16afbf
