add session_secret env var

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ HASH_KEY = WYS1lMxZZvoLIifGPyCya7k7KC1VA6Lz
 HASH_IV = CAe2WhQfqzYMHkoP
 IMGUR_CLIENT_ID = f942201de16afbf
 JWT_SECRET = jwtsecret
+SESSION_SECRET = sessionsecret
