--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "faker": "^5.5.3",
     "imgur-node-api": "^0.1.0",
     "jsonwebtoken": "^8.5.1",
+    "memorystore": "^1.6.6",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
