--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ HASH_IV = CAe2WhQfqzYMHkoP
 IMGUR_CLIENT_ID = f942201de16afbf
 JWT_SECRET = jwtsecret
 SESSION_SECRET = sessionsecret
+GOOGLE_CLIENT_ID = 641954433492-a3u58a0djj6irhvp229m5g2eo2vnq5si.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = IIFJff90GSZA-kYgCq-_SZ-Z
+GOOGLE_CALLBACK = https://3558cc6c887c.ngrok.io/users/google/callback
