--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mysql2": "^2.2.5",
     "nodemailer": "^6.6.0",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
